--- a/面试题.md
+++ b/面试题.md
@@ -2,7 +2,58 @@
 * https://blog.csdn.net/liuxiao214/article/details/83043170
 * https://blog.csdn.net/qq_39056987/article/details/112104199
 * https://blog.csdn.net/qq_39056987/article/details/112156926
-* https://blog.csdn.net/qq_39056987/article/details/112156926
+
+- 常见的初始化方法
+- 写一下leaky ReLU的公式
+- 介绍YOLO系列的损失函数
+- Anchor-free的优势在哪里？
+- Adam用到二阶矩的原理是什么？
+
+- 介绍跨卡同步BN
+- Canny算子的原理
+- GBDT的G梯度的向量长度为多少？
+- C++底层代码实现图像3*3均值滤波
+- One-stage和two-stage检测网络区别
+
+- Triplet loss介绍
+- HOG特征的计算过程
+- YOLOv4的数据增强方法
+- 介绍SIFT算法，具有哪些不变性？
+- AdaBoost和随机森林有什么区别？
+
+- mIoU计算方法
+- 介绍BN及其变体
+- ROI pooling 作用
+- 朴素贝叶斯，为什么朴素？
+- 画一下Transformer结构图
+
+
+- 介绍ReLU和变体
+- 如何可视化特征图？
+- ROC曲线的横纵轴是什么？
+- 卷积层参数量运算量的计算
+- 为什么Transformer需要多头注意力?
+
+- 介绍RoI Pooling
+- LightGBM的原理
+- Transformer的结构介绍
+- 正则化L1和L2有什么区别？
+- XGBoost是怎么选择最优分裂点的？
+
+
+- 介绍残差块的结构
+- Adam和SGD的区别
+- 为什么GAN很难训练？
+- 越大的BatchSize就越好吗？
+- K-means与DBSCAN的区别
+
+- 介绍EfficientNet
+- NMS的作用和步骤
+- 写一下Focal Loss公式
+- GBDT和XGBoost的区别
+- 如何理解Self-Attention中的Q, K, V？
+
+
 
 1.传统图像算法问题
 图像预处理有哪些方法？
