--- a/deeplearning/调参经验.md
+++ b/deeplearning/调参经验.md
@@ -2,65 +2,65 @@
 
 ## 做工程
 
-\* 3x3卷积CNN的主流组件。平时有设计一些解决分类，回归任务的网络，里面的卷积核基本都设置为3x3，要说原因的话应该去问问VGG16吧。两个3x3的卷积核堆叠能获得5x5卷积核的感受野并且参数比5x5卷积核少，所以是大量推荐使用的。
+* 3x3卷积CNN的主流组件。平时有设计一些解决分类，回归任务的网络，里面的卷积核基本都设置为3x3，要说原因的话应该去问问VGG16吧。两个3x3的卷积核堆叠能获得5x5卷积核的感受野并且参数比5x5卷积核少，所以是大量推荐使用的。
 
-\* 可以适当使用1xN卷积，为什么要提升这一点呢？这是因为1xN卷积可以减少计算量，并且1xN卷机可以在某个方向强调感受野，也就是说假如如果你要对一个长方形的目标进行分类，你可以使用1xN的卷积核搭配3x3的卷积核对长边方向设定更大的感受野，或许可以获得泛化性能的提升。
+* 可以适当使用1xN卷积，为什么要提升这一点呢？这是因为1xN卷积可以减少计算量，并且1xN卷机可以在某个方向强调感受野，也就是说假如如果你要对一个长方形的目标进行分类，你可以使用1xN的卷积核搭配3x3的卷积核对长边方向设定更大的感受野，或许可以获得泛化性能的提升。
 
-\* 卷积核权重初始化方式。对weight的初始化我一般都是使用xavier初始化。
+* 卷积核权重初始化方式。对weight的初始化我一般都是使用xavier初始化。
 
-\* Batch Normalization. 这是我一直使用的技巧，可以很大程度的加快收敛速度，建议搭建自己网络的时候尽量加上BN，如果有BN了全连接层没必要加Dropout了。
+* Batch Normalization. 这是我一直使用的技巧，可以很大程度的加快收敛速度，建议搭建自己网络的时候尽量加上BN，如果有BN了全连接层没必要加Dropout了。
 
-\* 目标检测不能盲目去掉fpn结构。在针对自己的数据调检测任务如yolov3的时候不能盲目砍掉fpn结构，尽管你分析出某个分支的Anchor基本不可能会对你预测的目标起作用，但如果你直接去掉分支很可能会带来漏检。
+* 目标检测不能盲目去掉fpn结构。在针对自己的数据调检测任务如yolov3的时候不能盲目砍掉fpn结构，尽管你分析出某个分支的Anchor基本不可能会对你预测的目标起作用，但如果你直接去掉分支很可能会带来漏检。
 
-\* 优化器的选择，我基本上都是带动量的SGD，如果优化不动可以试试Adam。
+* 优化器的选择，我基本上都是带动量的SGD，如果优化不动可以试试Adam。
 
-\* 激活函数。可以先用RELU，如果想再提升精度可以将relu改成prelu试试。
+* 激活函数。可以先用RELU，如果想再提升精度可以将relu改成prelu试试。
 
-\* batch size：在不同类型的任务中，batch_size的影响也不同。
+* batch size：在不同类型的任务中，batch_size的影响也不同。
 
-\* 初始化学习率，一般是从0.01开始设置，我个人认为这个学习率和学习率衰减策略是相关的，但不宜设置的过大过小，0.01和0.1应该是比较常用的。学习率衰减策略我一般使用multistep方式，step_size的设置要看视你的的max_iter而定。
+* 初始化学习率，一般是从0.01开始设置，我个人认为这个学习率和学习率衰减策略是相关的，但不宜设置的过大过小，0.01和0.1应该是比较常用的。学习率衰减策略我一般使用multistep方式，step_size的设置要看视你的的max_iter而定。
 
-\* 数据与处理之zero-center
+* 数据与处理之zero-center
 
-\* 残差结构和密集链接。
+* 残差结构和密集链接。
 
-\* 关于loss，优秀loss一般是对模型的泛化性能有所改善的。但是用loss的时候往往并不是直接替换loss那么简单，需要仔细思考loss背后的数学原理，要用对地方才可有提升，例如，如果将focal loss用到yolov3中提升map.
+* 关于loss，优秀loss一般是对模型的泛化性能有所改善的。但是用loss的时候往往并不是直接替换loss那么简单，需要仔细思考loss背后的数学原理，要用对地方才可有提升，例如，如果将focal loss用到yolov3中提升map.
 
-\* 找到模型调参时的可靠评价指标，在调参训练模型时一定要找到正确的评价指标，每调整一个参数就要记录一下模型的评价指标如准确率，map值，miou值等。并且在调参时建议将调整的参数和在测试集上的精度组合成一个字符串给模型重命令，方便之后快速review
+* 找到模型调参时的可靠评价指标，在调参训练模型时一定要找到正确的评价指标，每调整一个参数就要记录一下模型的评价指标如准确率，map值，miou值等。并且在调参时建议将调整的参数和在测试集上的精度组合成一个字符串给模型重命令，方便之后快速review
 
-\* 使用带backone的网络，如训练VGG16-ssd建议选择finetune的方式，从头训练不仅耗时耗力，甚至难以收敛。
+* 使用带backone的网络，如训练VGG16-ssd建议选择finetune的方式，从头训练不仅耗时耗力，甚至难以收敛。
 
-\*在做分割实验的时候我发现用unsampleing加1x1卷积代替反卷积坐上采样得到的结果更平滑，并且miou差距不大，所以我认为这两者都是可以使用的。
+*在做分割实验的时候我发现用unsampleing加1x1卷积代替反卷积坐上采样得到的结果更平滑，并且miou差距不大，所以我认为这两者都是可以使用的。
 
-\## 简短的注意事项
+## 简短的注意事项
 
-\* 预处理，-mean/std zero-center就够了，pca，白化什么的都用不上
+* 预处理，-mean/std zero-center就够了，pca，白化什么的都用不上
 
-\* shuffle，shuffle，shuffle
+* shuffle，shuffle，shuffle
 
-\* 网络原理的理解最重要，CNN的conv这块，你的明白sobel算法的边界预测
+* 网络原理的理解最重要，CNN的conv这块，你的明白sobel算法的边界预测
 
-\* Dropout，Dropout，Dropout（不仅仅可以防止过拟合，其实这相当于成本最低的ensemble，当然训练起来会比没有Dropout要慢一点，同事网络参数你最好响应加一点）
+* Dropout，Dropout，Dropout（不仅仅可以防止过拟合，其实这相当于成本最低的ensemble，当然训练起来会比没有Dropout要慢一点，同事网络参数你最好响应加一点）
 
-\* CNN更加适合训练回答是否的问题，如果任务比较复杂，考虑先用分类任务训练一个模型再finetune
+* CNN更加适合训练回答是否的问题，如果任务比较复杂，考虑先用分类任务训练一个模型再finetune
 
-\* 无脑用relu
+* 无脑用relu
 
-\* 无脑用3*3
+* 无脑用3*3
 
-\* 无脑用xavier
+* 无脑用xavier
 
-\* LRN一类的，其实可以不用，不行可以在拿来试试看
+* LRN一类的，其实可以不用，不行可以在拿来试试看
 
-\* filter数量2^n 
+* filter数量2^n 
 
-\* 多尺度的图片输入（或者网络内部利用多尺度下的结果）又很好的提升效果
+* 多尺度的图片输入（或者网络内部利用多尺度下的结果）又很好的提升效果
 
-\* 第一层的filter，数量不要太少，否则根本学不出来，底层特征很重要
+* 第一层的filter，数量不要太少，否则根本学不出来，底层特征很重要
 
-\* sgd adam，优化器上，一般采用sgd+momentum
+* sgd adam，优化器上，一般采用sgd+momentum
 
-\* BN 
+* BN 
 
 
 
