--- a/公众号相关.md
+++ b/公众号相关.md
@@ -1,3 +1,13 @@
+机器学习AI算法工程:
+tensorflow版PSENet 文本检测模型训练和测试
+https://github.com/liuheng92/tensorflow_PSENet
+
+
+机器学习AI算法工程:
+efficientdet-pytorch训练自己的数据集
+https://github.com/bubbliiiing/efficientdet-pytorch
+
+
 图像匹配，基于深度学习DenseNet实现以图搜图功能
 https://blog.csdn.net/chenghaoy/article/details/84977406?utm_source=distribute.pc_relevant.none-task
 
