--- a/面试题/小目标检测.md
+++ b/面试题/小目标检测.md
@@ -2,7 +2,7 @@
 
 #### 参考链接
 
-\* [我们是如何改进YOLOv3进行红外小目标检测的](https://www.cnblogs.com/pprp/p/13644068.html)
+* [我们是如何改进YOLOv3进行红外小目标检测的](https://www.cnblogs.com/pprp/p/13644068.html)
 
 * 修改Anchor
 
