--- a/面试题.md
+++ b/面试题.md
@@ -2,6 +2,7 @@
 * https://blog.csdn.net/liuxiao214/article/details/83043170
 * https://blog.csdn.net/qq_39056987/article/details/112104199
 * https://blog.csdn.net/qq_39056987/article/details/112156926
+* CNN调优总结：https://mp.weixin.qq.com/s/UJZm3A54qeWLzAMXQ_x05Q
 
 - 常见的初始化方法
 - 写一下leaky ReLU的公式
