--- a/模型剪枝方法.md
+++ b/模型剪枝方法.md
@@ -1,7 +1,11 @@
-### 参考链接
+## 参考链接
 
 * [如何让你的yoloV3模型更小更快？](https://mp.weixin.qq.com/s/nqEXUBXHedNImabZboSk3Q)
 * [yolov3通道剪枝层剪枝知识蒸馏：无人机数据集案例](https://blog.csdn.net/weixin_41397123/article/details/103828931)
 * [Pruned-OpenVINO-YOLO](https://github.com/TNTWEN/Pruned-OpenVINO-YOLO)
-
 * [yolov3-channel-and-layer-pruning](https://github.com/tanluren/yolov3-channel-and-layer-pruning)
+
+
+## 模型压缩
+* [DeepRebirth——从非权重层入手来进行模型压缩](https://blog.csdn.net/shentanyue/article/details/83508408)
+* [深度学习模型压缩方法（1）-----综述](https://blog.csdn.net/shentanyue/article/details/83508497)
