--- a/深度学习相关知识.md
+++ b/深度学习相关知识.md
@@ -1,6 +1,6 @@
 ## GPU多卡训练总结
-[以pytorch为例，gpu多卡并行训练总结](https://bbs.cvmart.net/articles/5385)
-
+* [以pytorch为例，gpu多卡并行训练总结](https://bbs.cvmart.net/articles/5385)
+* [Pytorch中多GPU并行计算教程](https://blog.csdn.net/qq_37541097/article/details/109736159?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522164733025716780261975313%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fblog.%2522%257D&request_id=164733025716780261975313&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_ecpm_v1~rank_v31_ecpm-1-109736159.nonecase&utm_term=GPU&spm=1018.2226.3001.4450)
 
 ## keras过拟合相关解决方法
 https://mp.weixin.qq.com/s/fHDL-137qIBOvmUTfyEG8Q
