统计文件夹内文件个数

--- a/命令行.md
+++ b/命令行.md
@@ -55,6 +55,11 @@ echo 3 > /proc/sys/vm/drop_caches
 
 > ps -ef|grep trainzhengfan.py|grep -v grep|cut -c 9-15|xargs kill -9    
 
+### 查看某个文件夹下的文件数目
+```
+ls -l | grep "^-" | wc -l
+```
+
 ### GPU
 > 查看相关信息：nvidia-smi
 
